discussion/kv_engine/184403/184403_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Move start/stop persistence off unknown command

Call the methods from the core and not within the engine itself as
we want to separate out the protocol bits from the engine (ideally
we should not pass any Request or Response objects through the
engine interface to allow for implementation of a different on
the wire protocol)

Change-Id: I689aab95b63395500915a87dd21f3690d430d898

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-01-02 08:43:35.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-02 08:58:00.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22253/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/start_stop_persistence_executor.cc:25:9: error: use of undeclared identifier "LOG_WARNING" [clang-diagnostic-error]
        LOG_WARNING(
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/start_stop_persistence_executor.cc:43:9: error: use of undeclared identifier "LOG_WARNING" [clang-diagnostic-error]
        LOG_WARNING(
        ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22253/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/start_stop_persistence_executor.cc:25:9:
error: use of undeclared identifier "LOG_WARNING" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22253/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51573/ : FAILURE

Link error: error LNK2019: unresolved external symbol "enum cb::engine_errc __cdecl stop_persistence_executor(class Cookie &)" (?stop_persistence_executor@@YA?AW4engine_errc@cb@@AEAVCookie@@@Z) referenced in function "void __cdecl initialize_mbcp_lookup_map(void)" (?initialize_mbcp_lookup_map@@YAXXZ) ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51573/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43292/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/protocol/mcbp/start_stop_persistence_executor.cc:25:9:
error: use of undeclared identifier "LOG_WARNING"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43292/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11971/ : FAILURE

Clang linker error: linker command failed with exit code 1 (use -v to see invocation) ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11971/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1011/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1011/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23822/ : FAILURE

Clang linker error: linker command failed with exit code 1 (use -v to see invocation) ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23822/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25577/ : FAILURE

Clang linker error: linker command failed with exit code 1 (use -v to see invocation) ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25577/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24717/ : FAILURE

Compile error at [2023-01-02T08:55:39.024Z] ../kv_engine/daemon/protocol/mcbp/start_stop_persistence_executor.cc:25:9:
error: ?LOG_WARNING? was not declared in this scope; did you mean ?SYSLOG_WARNING??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24717/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24296/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24296/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32714/ : FAILURE

Clang linker error: linker command failed with exit code 1 (use -v to see invocation) ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32714/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12060/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12060/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21868/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
